# HexGrid

./: CMakeLists.txt  FractionalHex.hpp  Hex.hpp  Point.hpp  include_test_main.cpp  lib.cc  libhex.cpp  libhex.hpp  libhex_test.cpp  main.cpp  make.sh  suppress.txt
Hexagon/: Hex.hpp  Layout.hpp  OffsetCoord.hpp  Orientation.hpp  Point.hpp
TRASH/: Layout.hpp  Map.hpp  Orientation.hpp
doc/: code.html
doc/UML/: Hexagon
shader/: shader.frag  shader.vs
src/: Shader.cpp  Shader.hpp  main.cpp  prototype.cpp
src/Hexagon/: make.sh
